- починил тест про пул небольших значений